--- a/index.html
+++ b/index.html
@@ -3,12 +3,54 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap 101 templates</title>
+    <title>ACE MATHS | Welcome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="dist3/css/bootstrap.min.css" />
     <script src="main.js"></script>
 </head>
 <body> 
+    <nav style="background-color: orangered" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="navbar-header">            
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navlist">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Ace Maths</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navlist">
+            <ul class="nav navbar-nav nav navbar-right">
+                <li class="active"><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Forum</a></li>
+                
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+
+    </div>
+
+    </nav>
+    <div class="container">
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
    
             
 
